@@ -18,4 +18,9 @@
 // Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston,
 // MA 02110-1301, USA.
 
-int a;
+int a = -1;
+
+int t1(int b)
+{
+  return a + b;
+}
