@@ -1,5 +1,11 @@
 2010-08-12  Cary Coutant  <ccoutant@google.com>
 
+	* testsuite/incremental_test.sh: Rewrite.
+	* testsuite/incremental_test_1.c: Rewrite.
+	* testsuite/incremental_test_2.c: Rewrite.
+
+2010-08-12  Cary Coutant  <ccoutant@google.com>
+
 	* arm.cc (Target_arm::got_size): Add const.
 	(Target_arm::got_entry_count): New function.
 	(Target_arm::plt_entry_count): New function.
